poc-mstemplate-poc.yaml
apiVersion: v1
kind: Service
metadata:
  name: intended-offer-svc
  namespace: default
  labels:
    app: intended-offer
    service: intended-offer-svc
spec:
  selector:
    app: intended-offer
  ports:
    - port: 8080
      nodePort: 30080
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intended-offer-v1
  namespace: default
  labels:
    app: intended-offer
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: intended-offer
      version: v1
  template:
    metadata:
      labels:
        app: intended-offer
        version: v1
    spec:
      containers:
        - name: intended-offer
          image: fra.ocir.io/frdvdrigd38a/validator-main:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: ocirsecret
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: intended-offer
  namespace: default
spec:
  host: intended-offer-svc
  subsets:
    - name: v1
      labels:
        version: v1
